2007-09-20  John Peacock <jpeacock@cpan.org>

	New code to handle versions too large to fit into an IV slot.
	Both the pure Perl and XS code are now safe to use with ~0
	Test new functionality.

2007-04-17  John Peacock <jpeacock@cpan.org>

	Neglected to delete or comment out a $DB::single (again).

2007-04-17  John Peacock <jpeacock@cpan.org>

	One last place that needed a leading 'v' (for non-magic v-strings).

2007-04-17  John Peacock <jpeacock@cpan.org>

	v-string created version objects always stringify with a leading 'v' for
	consistency's sake, since we have no way of knowing whether one was present
	for 5.6.0 <= Perl < 5.8.1 (non-magic v-strings).

2007-04-17  John Peacock <jpeacock@cpan.org>

	When copying an existing version object, forgot to copy the original string
	representation.

2007-04-14  John Peacock <jpeacock@cpan.org>

	Return original string value for all stringification cases except for
	qv(1.2) which returns 'v1.2' for roundtrip purposes.

2007-04-12  John Peacock <jpeacock@cpan.org>

	Output the original string form for numeric versions for XS code now.
	Ready to release to CPAN.

2007-04-12  John Peacock <jpeacock@cpan.org>

	It will be less surprising to overload string comparisons (now that the
	default stringification is identical to the initializer) than it would be
	to not overload them.

2007-04-11  John Peacock <jpeacock@cpan.org>

	Better way to handle the undef initialization case.

2007-04-11  John Peacock <jpeacock@cpan.org>

	Disallow string comparisons with version objects.  Tests adjusted to use
	numeric comparisons only.

2007-04-11  John Peacock <jpeacock@cpan.org>

	Cache the original string used to initialize the version object and return
	that when stringifying.  Only works with pure Perl class for the moment.

2007-03-18  John Peacock <jpeacock@cpan.org>

	Add more text to README on v-string support.

2007-03-18  John Peacock <jpeacock@cpan.org>

	Now supports non-magical v-strings (Perl 5.6.0-5.8.0)!